--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@huggingface/inference": "^4.13.5",
+    "@supabase/supabase-js": "^2.89.0",
+    "groq-sdk": "^0.37.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
